# uReticulum

./: .gitignore  CMakeLists.txt  README.md  TODO  flake.nix
firmware/heltec_v3/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.rnode_ble
firmware/heltec_v3/components/ureticulum/: CMakeLists.txt
firmware/heltec_v3/main/: CMakeLists.txt  Kconfig.projbuild  heltec_v3_pins.h  idf_component.yml  lora_interface.cpp  lora_interface.h  main.cpp  nomadnet_node.cpp  nomadnet_node.h  oled.cpp  oled.h  ota_update.cpp  ota_update.h  radiolib_esp_idf_hal.cpp  radiolib_esp_idf_hal.h  rnode_ble_bridge.cpp  rnode_ble_bridge.h  rnode_bridge.cpp  rnode_bridge.h  tcp_interface.cpp  tcp_interface.h  wifi_sta.cpp  wifi_sta.h
include/ureticulum/: bytes.h  destination.h  hal.h  identity.h  interface.h  link.h  memory.h  msgpack.h  packet.h  reticulum.h  transport.h  type.h
include/ureticulum/cryptography/: aes.h  ed25519.h  fernet.h  hashes.h  hkdf.h  hmac.h  pkcs7.h  random.h  token.h  x25519.h
include/ureticulum/interfaces/: loopback.h
port/esp_idf/: hal_esp_idf.c
port/freertos/: hal_freertos.c
port/posix/: hal_posix.c
src/: bytes.cpp  crc.cpp  destination.cpp  identity.cpp  interface.cpp  link.cpp  memory.cpp  msgpack.cpp  packet.cpp  reticulum.cpp  transport.cpp
src/cryptography/: aes.cpp  ed25519.cpp  fernet.cpp  hashes.cpp  hkdf.cpp  hmac.cpp  token.cpp  x25519.cpp
src/interfaces/: loopback.cpp
test/: test_bytes.cpp  test_crc.cpp  test_crypto.cpp  test_identity.cpp  test_loopback.cpp  test_pkcs7.cpp  test_reticulum_task.cpp  test_tlsf.cpp  test_transport.cpp  test_transport_concurrency.cpp
